# cli-device-sim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: engineering-notes.md  failure-modes.md  review-questions.md  runbook.md  study-guide.md
docs/adr/: 0001-docker-first-windows-entrypoint.md  0002-snapshot-backed-state-model.md  0003-single-process-api-and-ssh-runtime.md
scripts/: Start-Sim.ps1  Stop-Sim.ps1  Test-SshLogin.ps1
src/cli_device_sim/: __init__.py  __main__.py  api.py  cli_engine.py  config.py  logging_utils.py  main.py  models.py  rendering.py  runtime.py  ssh_server.py  state.py
tests/: conftest.py  helpers.py  test_config_persistence.py  test_drift.py  test_prompt_transitions.py  test_ssh_login.py
